# mig-institutional-api-client

./: CHANGELOG.md  README.md  main.py  pyproject.toml
mig_client/: __init__.py  core.py
